# Neutral_Gear_News

./: .gitignore  README.md  package.json  pyproject.toml
backend/: app.py  crawler_news.py
frontend/: package.json
frontend/src/: App.css  App.js  index.js
frontend/src/components/: Navigation.js  NewsBigData.css  NewsBigData.js  NewsHeadline.css  NewsHeadline.js  Restaurant.css  Restaurant.js
frontend/src/routes/: About.js  Home.css  Home.js
frontend/src/routes/detail_page/: Detail.js
