[tool.poetry]
name = "neutral_near_news"
version = "0.1.0"
description = ""
authors = ["Sion Noh <shtldhs123@ajou.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pymongo = "^3.12.0"
Flask-Cors = "^3.0.10"
bs4 = "^0.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
